--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -26,9 +26,6 @@
   "all_popups": {
     "message": "Tutti i popup"
   },
-  "all_set__go_with_ghosty_": {
-    "message": "Tutto pronto! vai con ghosty!"
-  },
   "anti_tracking": {
     "message": "Anti-Tracking"
   },
@@ -64,8 +61,8 @@
     "message": "CDN",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Consulta le <a href=\"$${0}\" target=\"_blank\">FAQ</a> o scrivici all'indirizzo <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. Saremo più che felice di assisterti!"
+  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
+    "message": "Consulta le FAQ di <a href=\"$${0}\" target=\"_blank\"> </a> o scrivici a <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Saremo più che felici di parlare con te!"
   },
   "comments": {
     "message": "Commenti",
@@ -85,14 +82,14 @@
   "detailed_view": {
     "message": "Vista Dettagliata"
   },
-  "disable_tracker_wheel_in_browser_toolbar": {
-    "message": "Disattiva Tracker Wheel nella barra degli strumenti del browser"
-  },
   "disable_trackers_preview": {
     "message": "Disattiva anteprima Tracker"
   },
   "done": {
     "message": "Fatto"
+  },
+  "done__go_with_ghosty_": {
+    "message": "Fatto! Vai con Ghosty!"
   },
   "email": {
     "message": "Email",
@@ -127,8 +124,8 @@
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery è impostato per bloccare i tracker e proteggere la tua privacy durante la navigazione!"
   },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery blocca i tracker, impedisce la profilazione e che le tue informazioni personali vengano vendute a broker di dati per profitto."
+  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
+    "message": "Ghostery blocca i tracker e impedisce che tu venga profilato e che le tue informazioni personali vengano vendute agli intermediari di dati."
   },
   "ghostery_options": {
     "message": "Opzioni Ghostery"
@@ -140,11 +137,11 @@
     "message": "Hosting",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "Accetto di inviare informazioni non personali a <a href=\"$${0}\">WhoTracks.Me</a> e accetto l'informativa sulla privacy di Ghostery <a href=\"$${1}\">."
+  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
+    "message": "Accetto di inviare informazioni non personali a <a href=\"$${0}\"> WhoTracks.Me di Ghostery </a>, e accetto l'Informativa sulla trattamento dei dati personali di <a href=\"$${1}\"> Ghostery </a> "
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "Esiste grazie ai microcontributi di ogni utente di Ghostery che sceglie di inviare le informazioni del tracker a whotracks.me. L'input del tracker consente a Ghostery di fornire informazioni in tempo reale sui tracker e sulla protezione all'intera comunità di utenti di Ghostery."
+  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
+    "message": "Esiste grazie ai micro-contributi di ogni utente di Ghostery che sceglie di inviare informazioni non personali a WhoTracks.Me. Il contributo permette a Ghostery di fornire informazioni in tempo reale sui tracker, che a loro volta proteggono l'intera comunità di Ghostery."
   },
   "learn_more": {
     "message": "Ulteriori informazioni"
@@ -162,8 +159,8 @@
     "message": "Varie",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "more_information_on_@_0__": {
-    "message": "Ulteriori informazioni su $${0}."
+  "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
+    "message": "Maggiori informazioni sulla metodologia $${0} nel Manifesto di Ghostery."
   },
   "never_consent": {
     "message": "Never-Cosent"
@@ -183,6 +180,9 @@
   "ok": {
     "message": "OK"
   },
+  "ok__i_understand": {
+    "message": "Ok, capisco"
+  },
   "on": {
     "message": "Attivo"
   },
@@ -200,6 +200,9 @@
   },
   "report_a_broken_page": {
     "message": "Segnala una pagina orfana"
+  },
+  "show_tracker_wheel_in_the_browser_toolbar": {
+    "message": "Show Tracker Wheel in the browser toolbar"
   },
   "show_trackers_preview_next_to_search_results": {
     "message": "Mostra anteprima Tracker accanto ai risultati di ricerca"
@@ -249,17 +252,17 @@
   "user_interface": {
     "message": "Interfaccia utente"
   },
-  "welcome_to": {
-    "message": "Benvenuto su"
+  "welcome_to_ghostery": {
+    "message": "Benvenuto in Ghostery"
   },
   "what_is_whotracks_me_": {
-    "message": "Che cos'è whotracks.me?"
+    "message": "Che cos'è WhoTracks.Me?"
   },
-  "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, gestito da Ghostery, è la risorsa globale più completa sui tracker, a favore della trasparenza nel web tracking."
+  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.Me, gestito da Ghostery, è parte integrante della tecnologia anti-tracciamento AI di Ghostery. Si tratta di una risorsa globale completa sui tracker, che porta trasparenza al tracciamento sul web."
   },
-  "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Con Ghostery abilitato puoi navigare sul web in modo più sicuro, più veloce e con meno pubblicità."
+  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
+    "message": "Con Ghostery attivato navighi sul web in modo più sicuro, più veloce e con meno annunci fastidiosi."
   },
   "yes": {
     "message": "Sì"
@@ -267,8 +270,8 @@
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Puoi sempre possibile modificare queste impostazioni nel&nbsp;<strong>pannello di controllo di Ghostery</strong>."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "Puoi cambiare idea in qualsiasi momento e consentire a Ghostery di iniziare a tracciare i tracker per te nelle impostazioni di Ghostery."
+  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
+    "message": "Puoi cambiare idea in qualsiasi momento e consentire a Ghostery di iniziare a tracciare i tracker per te nel pannello di Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Hai scelto di non abilitare Ghostery!"
