--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -26,9 +26,6 @@
   "all_popups": {
     "message": "すべてのポップアップ"
   },
-  "all_set__go_with_ghosty_": {
-    "message": "準備万端! ゴーストと立ち向かいましょう！"
-  },
   "anti_tracking": {
     "message": "追跡防止"
   },
@@ -64,8 +61,8 @@
     "message": "CDN",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "<a href=\"$${0}\" target=\"_blank\">FAQ</a> をご覧いただくか、<a href=\"mailto:support@ghostery.com\">support@ghostery.com</a> までご連絡ください。 ぜひ、ご相談ください。"
+  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
+    "message": "<a href=\"$${0}\" target=\"_blank\">FAQs</a> を確認するか、<a href=\"mailto:$${1}\">$${2}</a>までお問い合わせください。 <br/> ぜひ、ご相談ください。"
   },
   "comments": {
     "message": "コメント",
@@ -85,14 +82,14 @@
   "detailed_view": {
     "message": "詳細ビュー"
   },
-  "disable_tracker_wheel_in_browser_toolbar": {
-    "message": "ブラウザのツールバーでトラッカーホイールを無効にする"
-  },
   "disable_trackers_preview": {
     "message": "トラッカーの無効化プレビュー"
   },
   "done": {
     "message": "完了"
+  },
+  "done__go_with_ghosty_": {
+    "message": "完了！ Ghostyを使いましょう！"
   },
   "email": {
     "message": "メール",
@@ -127,8 +124,8 @@
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghosteryは、トラッカーを足止めし、ブラウジング中のプライバシーを保護するように設定されています!"
   },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghosteryはトラッカーの追跡を止め、あなたがプロファイリングされ、あなたの個人情報がデータブローカーに売られ、利益を得ることを防いでいます。"
+  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
+    "message": "Ghosteryはトラッカーの追跡を止め、あなたがプロファイリングされ、あなたの個人情報がデータブローカーに売られることを防いでいます。"
   },
   "ghostery_options": {
     "message": "Ghosteryのオプション"
@@ -140,11 +137,11 @@
     "message": "ホスティング",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "<a href=\"$${0}\">WhoTracks.Me</a> に個人情報以外の情報を送信することに同意し、Ghosteryの<a href=\"$${1}\">Privacy Policy</a> を承諾します。"
+  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
+    "message": "<a href=\"$${0}\">Ghostery’s WhoTracks.Me</a>に個人情報以外の情報を送信することに同意し、<a href=\"$${1}\">GhosteryのPrivacy Policy</a><a href=\"$${0}\">WhoTracks.Me</a> を承諾します。"
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "これは、whotracks.meにトラッカー情報を送信することを選択したGhosteryユーザー全員による、少額の寄付のおかげで存在しています。 トラッカーの入力により、Ghosteryはトラッカーと保護に関するリアルタイムの情報をGhosteryのユーザーコミュニティ全体に提供することができます。"
+  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
+    "message": "これは、WhoTracks.Meに個人情報以外の情報を送信することを選択したGhosteryユーザー全員による、小さな貢献のおかげで存在しています。 入力すると、Ghosteryは見返りとしてトラッカーと保護に関するリアルタイムの情報をGhosteryのコミュニティ全体に提供することができます。"
   },
   "learn_more": {
     "message": "詳細はこちら"
@@ -162,8 +159,8 @@
     "message": "さまざまな",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "more_information_on_@_0__": {
-    "message": "詳細は$${0}で。"
+  "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
+    "message": "$${0}の方法論の詳細については、Ghostery's Manifestoに記載されています。"
   },
   "never_consent": {
     "message": "決して同意しない"
@@ -183,6 +180,9 @@
   "ok": {
     "message": "OK"
   },
+  "ok__i_understand": {
+    "message": "はい、わかりました"
+  },
   "on": {
     "message": "オン"
   },
@@ -200,6 +200,9 @@
   },
   "report_a_broken_page": {
     "message": "区切られたページを報告"
+  },
+  "show_tracker_wheel_in_the_browser_toolbar": {
+    "message": "Show Tracker Wheel in the browser toolbar"
   },
   "show_trackers_preview_next_to_search_results": {
     "message": "検索結果の隣にトラッカーのプレビューを表示する"
@@ -249,16 +252,16 @@
   "user_interface": {
     "message": "ユーザーインターフェース"
   },
-  "welcome_to": {
-    "message": "ようこそ！"
+  "welcome_to_ghostery": {
+    "message": "Ghosteryをご利用いただきありがとうございます"
   },
   "what_is_whotracks_me_": {
-    "message": "whotracks.meとは何か？"
+    "message": "WhoTracks.Meとは何か？"
   },
-  "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "Ghosteryが運営するWhoTracks.meは、トラッカーに関する最も包括的なグローバルリソースで、Webトラッキングに透明性をもたらしています。"
+  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "Ghosteryが運営するWhoTracks.Meは、GhosteryのAIアンチトラッキング技術に統合されている要素です。 トラッカーに関する最も包括的なグローバルリソースで、Webトラッキングに透明性をもたらしています。"
   },
-  "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
+  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "Ghosteryを有効にすると、より安全に、より速く、そして迷惑な広告をより減らす形で、ウェブを瞬時にブラウズすることができます。"
   },
   "yes": {
@@ -267,8 +270,8 @@
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "&nbsp;<strong>Ghostery制御パネル</strong>でこれら設定をいつでも変更できます。"
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "お客様はいつでも考えが変わったときに、Ghosteryの設定によって、お客様へのトラッカーの追跡開始を有効にすることができます。"
+  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
+    "message": "お客様はいつでも考えが変わったときに、Ghosteryのパネルで、お客様へのトラッカーの追跡開始を有効にすることができます。"
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Ghosteryの有効化のスキップを選択しました。"
