--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -26,9 +26,6 @@
   "all_popups": {
     "message": "Wszystkie okienka typu Pop-up"
   },
-  "all_set__go_with_ghosty_": {
-    "message": "Gotowe! Wybierz ghosty!"
-  },
   "anti_tracking": {
     "message": "Ochrona przed śledzeniem"
   },
@@ -64,8 +61,8 @@
     "message": "CDN",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Sprawdź <a href=\"$${0}\" target=\"_blank\">FAQs</a> lub napisz do nas na adres <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. Chętnie odpowiemy na wszystkie pytania!"
+  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
+    "message": "Sprawdź <a href=\"$${0}\" target=\"_blank\"> FAQ </a> lub napisz do nas na <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Będziemy bardziej niż szczęśliwi, aby porozmawiać z tobą!"
   },
   "comments": {
     "message": "Komentarze",
@@ -85,14 +82,14 @@
   "detailed_view": {
     "message": "Widok szczegółowy"
   },
-  "disable_tracker_wheel_in_browser_toolbar": {
-    "message": "Wyłącz licznik tropicieli na pasku narzędzi przeglądarki"
-  },
   "disable_trackers_preview": {
     "message": "Wyłącz podgląd trackerów"
   },
   "done": {
     "message": "Gotowe"
+  },
+  "done__go_with_ghosty_": {
+    "message": "Zrobione! Idź z Ghosty!"
   },
   "email": {
     "message": "E-mail",
@@ -127,8 +124,8 @@
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery działa tak, aby zatrzymać trackery podczas ich śledzenia i ochronić Twoją prywatność podczas przeglądania internetu!"
   },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery blokuje trackery podczas śledzenia i zapobiega profilowaniu Ciebie i Twoich danych osobowych sprzedawanych brokerom danych dla ich własnego zysku."
+  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
+    "message": "Ghostery zatrzymuje trackery na ich drodze i zapobiega profilowaniu Ciebie i Twoich danych osobowych sprzedawanych brokerom danych."
   },
   "ghostery_options": {
     "message": "Ustawienia Ghostery"
@@ -140,11 +137,11 @@
     "message": "Hosting",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "Wyrażam zgodę na przesyłanie danych nieosobowych do <a href=\"$${0}\">WhoTracks.Me</a> i akceptuję politykę prywatności Ghostery <a href=\"$${1}\">Polityka prywatności</a>."
+  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
+    "message": "Wyrażam zgodę na przesyłanie informacji nieosobowych do <a href=\"$${0}\"> Ghostery WhoTracks.Me </a>, oraz akceptuję Politykę Prywatności <a href=\"$${1}\"> Ghostery </a> "
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "Istniejemy dzięki mikrowkładom każdego użytkownika Ghostery, który zdecyduje się wysłać informacje o trackerach do whotracks.me. Dostęp do trackerów umożliwia firmie Ghostery dostarczanie w czasie rzeczywistym informacji o trackerach i zapewnienie ochrony dla całej społeczności użytkowników Ghostery."
+  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
+    "message": "Istnieje dzięki mikrowkładom każdego użytkownika Ghostery, który zdecyduje się wysłać nieosobiste informacje do WhoTracks.Me. Wkład ten umożliwia Ghostery dostarczanie w czasie rzeczywistym informacji o trackerach, co z kolei zapewnia ochronę całej społeczności Ghostery."
   },
   "learn_more": {
     "message": "Dowiedz się więcej"
@@ -162,8 +159,8 @@
     "message": "Różne",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "more_information_on_@_0__": {
-    "message": "Więcej informacji na temat $${0}."
+  "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
+    "message": "Więcej informacji o metodologii $${0} w Manifeście Ghostery."
   },
   "never_consent": {
     "message": "Never-Consent"
@@ -183,6 +180,9 @@
   "ok": {
     "message": "OK"
   },
+  "ok__i_understand": {
+    "message": "Ok, rozumiem"
+  },
   "on": {
     "message": "Wł."
   },
@@ -200,6 +200,9 @@
   },
   "report_a_broken_page": {
     "message": "Zgłoś uszkodzoną stronę"
+  },
+  "show_tracker_wheel_in_the_browser_toolbar": {
+    "message": "Show Tracker Wheel in the browser toolbar"
   },
   "show_trackers_preview_next_to_search_results": {
     "message": "Wyświetlaj podgląd trackerach przy wynikach wyszukiwania"
@@ -249,17 +252,17 @@
   "user_interface": {
     "message": "Interfejs Użytkownika"
   },
-  "welcome_to": {
-    "message": "Witaj w"
+  "welcome_to_ghostery": {
+    "message": "Witamy w Ghostery"
   },
   "what_is_whotracks_me_": {
-    "message": "Czym jest whotracks.me?"
+    "message": "Czym jest WhoTracks.Me?"
   },
-  "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, obsługiwany przez Ghostery, jest najbardziej wszechstronnym globalnym zasobem dotyczącym trackerów, zapewniając przejrzystość śledzenia w sieci."
+  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.Me, obsługiwany przez Ghostery, jest integralną częścią technologii anty-śledzenia AI Ghostery. Jest to kompleksowy globalny zasób informacji o trackerach, wprowadzający przejrzystość do śledzenia w sieci."
   },
-  "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Z aktywną wtyczką Ghostery możesz od razu przeglądać strony internetowe bezpieczniej, szybciej i z mniejszą ilością irytujących reklam."
+  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
+    "message": "Z włączonym Ghostery przeglądasz strony internetowe bezpieczniej, szybciej i z mniejszą ilością irytujących reklam."
   },
   "yes": {
     "message": "Tak"
@@ -267,13 +270,13 @@
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Ustawienia te zawsze możesz zmienić w&nbsp;<strong>Panelu sterowania Ghostery</strong>."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "W każdej chwili możesz zmienić zdanie i zezwolić Ghostery na rozpoczęcie śledzenia trackerów w Twoim imieniu z poziomu ustawień Ghostery."
+  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
+    "message": "W każdej chwili możesz zmienić zdanie i umożliwić Ghostery rozpoczęcie śledzenia trackerów dla Ciebie w panelu Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Postanowiłeś nie aktywować Ghostery!"
   },
   "you_re_all_set__ghosterian_": {
-    "message": "Nie ma sprawy!"
+    "message": "Wszystko gotowe, Ghosterianie!"
   }
 }
