--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -26,9 +26,6 @@
   "all_popups": {
     "message": "Todos as popups"
   },
-  "all_set__go_with_ghosty_": {
-    "message": "Tudo pronto! vá com o fantasminha!"
-  },
   "anti_tracking": {
     "message": "Anti-rastreamento"
   },
@@ -64,8 +61,8 @@
     "message": "CDN",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Confira as <a href=\"$${0}\" target=\"_blank\">perguntas frequentesFAQs</a> ou escreva para a gente em <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. Teremos todo o prazer em falar com você!"
+  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
+    "message": "Confira nossas <a href=\"$${0}\" target=\"_blank\">FAQsperguntas frequentes</a> ou escreva-nos: <a href=\"mailto:$${1}\">$${2}</a>. <br/> Teremos o maior prazer em falar com você!"
   },
   "comments": {
     "message": "Comentários",
@@ -85,14 +82,14 @@
   "detailed_view": {
     "message": "Visão detalhada"
   },
-  "disable_tracker_wheel_in_browser_toolbar": {
-    "message": "Desativar o Tracker Wheel na barra de ferramentas do navegador"
-  },
   "disable_trackers_preview": {
     "message": "Desativar a visualização de rastreadores"
   },
   "done": {
     "message": "Pronto"
+  },
+  "done__go_with_ghosty_": {
+    "message": "Pronto! Vá com o Ghosty!"
   },
   "email": {
     "message": "Email",
@@ -127,8 +124,8 @@
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "O Ghostery está configurado para parar os rastreadores e proteger sua privacidade ao navegar!"
   },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "O Ghostery está parando os rastreadores e impedindo que seu perfil seja criado e suas informações pessoais sejam vendidas a negociadores de dados para que obtenham lucro."
+  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
+    "message": "O Ghostery está parando os rastreadores e impedindo que seu perfil seja criado e suas informações pessoais sejam vendidas a negociadores de dados."
   },
   "ghostery_options": {
     "message": "Opções do Ghostery"
@@ -140,11 +137,11 @@
     "message": "Hospedando",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "Concordo em enviar informações não pessoais para a <a href=\"$${0}\">WhoTracks.Me</a> e eu aceito a <a href=\"$${1}\">Política de Privacidade</a> do Ghostery"
+  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
+    "message": "Concordo em enviar informações não pessoais para o <a href=\"$${0}\">WhoTracks.Me do Ghostery</a> e aceito a <a href=\"$${1}\">Política de Privacidade do Ghostery</a>"
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "Ele existe graças às microcontribuições de cada usuário do Ghostery que opta por enviar informações do rastreador para whotracks.me. A entrada do rastreador permite que o Ghostery forneça informações em tempo real sobre rastreadores e proteção para toda a comunidade de usuários do Ghostery."
+  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
+    "message": "Ele existe graças às microcontribuições de cada usuário do Ghostery que opta por enviar informações não pessoais para o WhoTracks.Me. A entrada permite que o Ghostery forneça informações em tempo real sobre rastreadores que, por sua vez, trazem proteção para toda a comunidade Ghostery."
   },
   "learn_more": {
     "message": "Saiba mais"
@@ -162,8 +159,8 @@
     "message": "Miscelânea",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "more_information_on_@_0__": {
-    "message": "Mais informações sobre $${0}."
+  "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
+    "message": "Mais informações sobre a metodologia $${0} no Manifesto do Ghostery."
   },
   "never_consent": {
     "message": "Never-Consent"
@@ -183,6 +180,9 @@
   "ok": {
     "message": "OK"
   },
+  "ok__i_understand": {
+    "message": "Ok, eu entendo"
+  },
   "on": {
     "message": "Ligado"
   },
@@ -200,6 +200,9 @@
   },
   "report_a_broken_page": {
     "message": "Relatar uma página quebrada"
+  },
+  "show_tracker_wheel_in_the_browser_toolbar": {
+    "message": "Show Tracker Wheel in the browser toolbar"
   },
   "show_trackers_preview_next_to_search_results": {
     "message": "Mostrar visualização de rastreadores ao lado dos resultados da pesquisa"
@@ -249,17 +252,17 @@
   "user_interface": {
     "message": "Interface do usuário"
   },
-  "welcome_to": {
-    "message": "Bem-vindo a"
+  "welcome_to_ghostery": {
+    "message": "Bem-vindo ao Ghostery"
   },
   "what_is_whotracks_me_": {
-    "message": "O que é whotracks.me?"
+    "message": "O que é WhoTracks.Me?"
   },
-  "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "A extensão do navegador Ghostery está instalada no seu navegador, mas o Ghostery está tirando uma soneca leve."
+  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "O WhoTracks.Me, operado pela Ghostery, é parte integrante da tecnologia antirastreamento de IA da Ghostery. É um recurso global abrangente sobre rastreadores que traz transparência ao rastreamento na web."
   },
-  "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Com o Ghostery ativado, você navega instantaneamente na web de forma mais segura, rápida e com menos anúncios irritantes."
+  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
+    "message": "Com o Ghostery ativado, você navega instantaneamente na web de forma mais segura, mais rápida e com anúncios menos irritantes."
   },
   "yes": {
     "message": "Sim"
@@ -267,8 +270,8 @@
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Você sempre pode alterar essas configurações no&nbsp;<strong>painel de controle do Ghostery</strong>."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "Você pode mudar de ideia a qualquer momento e permitir que o Ghostery comece a rastrear os rastreadores para você nas configurações do Ghostery."
+  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
+    "message": "Você pode mudar de ideia a qualquer momento e permitir que o Ghostery comece a rastrear os rastreadores para você no painel do Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Você optou por ignorar a ativação do Ghostery!"
